menu bg version mobile & fix some details

--- a/src/scss/blocs/home.scss
+++ b/src/scss/blocs/home.scss
@@ -1,7 +1,6 @@
 .header{
     width: 90%;
 position: fixed;
-background-color: grey;
     &__content{
         display: flex;
         flex-direction: row;
@@ -18,9 +17,9 @@ background-color: grey;
     &__menu{
         position: fixed;
         z-index: 1;
-        background-color: #ffffff;
-        width: 50%;
-      left: 100%;
+        background-color: $white;
+        width: 100vw;
+        left: 100%;
         height: 100vh;
         top: 0;
         transition: ease-in-out 0.6s;
@@ -32,6 +31,9 @@ background-color: grey;
         align-content: space-around;
         text-align: center;
         height: 100vh;
+        @include pc{
+            width: 50%;
+        }
         & li{
             font-size: 54px; 
             font-weight: bold;
@@ -59,7 +61,10 @@ background-color: grey;
         }
     }
         &.visible{
+            left: 0%;
+            @include pc{
             left: 50%;
+            }
         }
     }
 
