--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -7,4 +7,5 @@ $pc:800px;
 //Colors
 $primary: #D6215C;
 $black:#000000;
+$white: #F5F6F6;
 
